# MafiaGPT

./: .gitignore  main.py  pyproject.toml
mafia/: display.py  game.py
