[tool.poetry]
name = "mafiagpt"
version = "0.1.0"
description = ""
authors = ["popovycj <marian.popovych.ua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
streamlit = "^1.25.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
